--- a/assets/css/Folio.css
+++ b/assets/css/Folio.css
@@ -69,7 +69,7 @@ section h4 span{
 
 /*---------- zweite seite ------------*/ 
 main {
-    height: 200vh;
+    height: 220vh;
     background-color: #F4C4C4;
     
 } 
@@ -90,10 +90,37 @@ main article:nth-of-type(1) p:nth-of-type(2){
     margin-right: 5%;
     line-height: 2em;
 }
+
+/*_____________ table ____________*/
+table{
+    /*background-color: yellowgreen;*/
+    margin-left: 55%;
+    width: 40%;
+    margin-top: 8%;
+    border-bottom: 1px solid black;
+    
+}
+table tr:nth-child(1) th:nth-of-type(1) {
+    border-bottom: 1px solid black;
+    text-align: right;
+    /*background-color: red;*/
+    padding-bottom: 10px ;
+    padding-left: 390px;
+    
+}
+.left{
+    font-size: 15px;
+    
+}
+.right{
+    text-align: right;
+}
+
 main article:nth-of-type(1) img{
     display: block;
-    margin-left: 80%;
+    margin-left: 87%;
     margin-right: auto;
+    margin-top: 7%;
 }
 
 /*-------- dritte seite --------*/
